# Hoihiro

./: .gitattributes  .gitignore  README.md
backend/: Dockerfile  Makefile  api.yml  get_schema.py  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  chat.py
backend/docs/: README.md
frontend/: .eslintrc.json  firebaseConfig.ts  next.config.mjs  orval.config.js  package.json
frontend/docs/: README.md
frontend/src/components/: ModalPost.tsx  chatTextArea.tsx  footer.tsx  header.tsx  modalImage.tsx  modalPost.tsx  modalReply.tsx
frontend/src/contexts/: ProfileContext.tsx
frontend/src/pages/: _app.tsx  allPosts.tsx  chat.tsx  detail.tsx  home.tsx  index.tsx  profile.tsx  signup.tsx
